BugFix. Modal would loose buttom-border when displayed details too much

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,7 +67,7 @@ h1 {
 //MODAL stylings
 
 .modal-content {
-   height: 300px;
+   min-height: 300px;
    width: 500px;
    background-color: $PrimaryColorBright;
    border: 4px solid $SecondaryColorDark;
